# cmake-modules

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cmrk-config.cmake.in
examples/: Findcmrk.cmake
examples/git_version_string/: CMakeLists.txt  README.md  test.sh
examples/git_version_string/include/: config.h.in
examples/git_version_string/src/: main.cpp
src/: BundleStatic.cmake  CopyRuntimeDLLs.cmake  DebugPrintVariables.cmake  GitVersionString.cmake  Option.cmake  TargetExportScript.cmake  UnsetFunction.cmake
src/internal/: BailMacro.cmake
tests/: CMakeLists.txt
tests/DebugPrintVariables/: default-environment.cmake
tests/templates/: CMakeLists.txt.in
